name:
  json-pointer
version:
  0.1
synopsis:
  JSON Pointer interpretation utilities
description:
  This library produces a model, which is supposed to be
  later interpreted by some specific parser.
  One such interpreter is provided by
  <http://hackage.haskell.org/package/json-query-json-pointer the "json-query-json-pointer" library>,
  which transforms JSON Pointer into a
  <http://hackage.haskell.org/package/json-query "json-query"> specification.
category:
  Data, JSON, Parsing
homepage:
  https://github.com/sannsyn/json-pointer 
bug-reports:
  https://github.com/sannsyn/json-pointer/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/sannsyn/json-pointer.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    JSONPointer.Prelude
  exposed-modules:
    JSONPointer.Parser
    JSONPointer.Model
  build-depends:
    -- 
    attoparsec >= 0.13 && < 0.14,
    --
    text == 1.*,
    --
    base-prelude >= 0.1.21 && < 0.2
